clerk webhook 及数据库用户创建和更新配置

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
     "next": "^15.4.0-canary.12",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "svix": "^1.64.1"
   },
   "devDependencies": {
     "@types/node": "^20",
